# Uru-Chatbot

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .prettierrc.js  ARCHITECTURE.md  DEBUG_CONSOLE_MESSAGES.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLE_FIXES.md  IMPLEMENTATION_STATUS.md  PRECOMMIT_SETUP.md  README.md  SECURITY_VALIDATION_REPORT.md  SETUP.md  SPEC.md  TASKLIST.md  VALIDATION.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: quality-checks.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  requirements-dev.txt  requirements.txt  startup.sh  test_basic.py
backend/app/: main.py
backend/app/adapters/: base.py  factory.py  openai_adapter.py
backend/app/api/: dependencies.py  router.py
backend/app/api/endpoints/: auth.py  chat.py  conversations.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/db/repositories/: conversation.py  message.py  user.py
backend/app/models/: __init__.py  conversation.py  message.py  user.py
backend/app/schemas/: chat.py  conversation.py  message.py  user.py
backend/app/streaming/: sse.py
backend/database/: DATABASE_OVERVIEW.md  README.md  alembic.ini
backend/database/migrations/: env.py
backend/database/migrations/versions/: a7f8b2c9d4e1_initial_migration.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_enhanced_models.py  002_fix_ai_model_column.py  d20c53c8b6cd_initial_migration.py
deployment/: ENV_VARS.md  README.md  elestio.yml
deployment/nginx/: default.conf  default.conf.template
frontend/: Dockerfile  Dockerfile.dev  eslint.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/components/: AzureLoginButton.tsx  ErrorBoundary.tsx
frontend/src/components/auth/: AuthErrorBoundary.tsx
frontend/src/components/chat/: ChatErrorBoundary.tsx  ChatInput.tsx  ChatInterface.tsx  ChatInterfaceWrapper.tsx  ChatMessage.tsx  ChatSkeleton.tsx  ConversationList.tsx  Header.tsx  ModelSelector.tsx  Sidebar.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/settings/: ApiKeyForm.tsx  SettingsModal.tsx
frontend/src/components/ui/: LoadingDots.tsx  LoadingSpinner.tsx  SkeletonLoader.tsx  Toast.tsx
frontend/src/contexts/: AuthContext.tsx  ChatContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: useErrorHandler.ts  useLoadingState.ts  useSSE.ts
frontend/src/lib/: api.ts  encryption.ts
frontend/src/pages/: _app.tsx  authorize.tsx  home.tsx  index.tsx  login.tsx  settings.tsx  test.tsx
frontend/src/pages/chat/: index.tsx
scripts/: setup_precommit.bat  setup_precommit.sh  test_precommit.py  validate_env_files.sh  validate_mcp_schemas.py
